--- a/TAREA4.ipynb
+++ b/TAREA4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TAREA4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPAO605gAAhULrf7blOcFEy",
+      "authorship_tag": "ABX9TyOyUQal/9i5GKb0QvIw7upr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,8 +102,7 @@
         "s=\" SSSSS\\nS\\n SSSS\\n     S\\nSSSSS \"\n",
         "a=\" AAAA \\nA    A\\nAAAAAA\\nA    A\\nA    A\"\n",
         "r=\"RRRRR \\nR    R\\nRRRRR \\nR   R \\nR    R\"\n",
-        "print(c+ \"\\n\\n\" +e+\"\\n\\n\"+s+\"\\n\\n\"+a+\"\\n\\n\"+r)\n",
-        "print(c, end=\"\")"
+        "print(c+ \"\\n\\n\" +e+\"\\n\\n\"+s+\"\\n\\n\"+a+\"\\n\\n\"+r)"
       ],
       "execution_count": 1,
       "outputs": [
