--- a/TAREA4.ipynb
+++ b/TAREA4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TAREA4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOyUQal/9i5GKb0QvIw7upr",
+      "authorship_tag": "ABX9TyMsMW8/d6AYsxDaYOyjgTUi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,63 @@
         "print(a, end=\"\\n\\n\")\n",
         "print(r)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CCCCCC\n",
+            "C\n",
+            "C\n",
+            "C\n",
+            "CCCCCC\n",
+            "\n",
+            "EEEEEE\n",
+            "E\n",
+            "EEE\n",
+            "E\n",
+            "EEEEEE\n",
+            "\n",
+            " SSSSS\n",
+            "S\n",
+            " SSSS\n",
+            "     S\n",
+            "SSSSS \n",
+            "\n",
+            " AAAA \n",
+            "A    A\n",
+            "AAAAAA\n",
+            "A    A\n",
+            "A    A\n",
+            "\n",
+            "RRRRR \n",
+            "R    R\n",
+            "RRRRR \n",
+            "R   R \n",
+            "R    R\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T5psZzxHJjXZ",
+        "outputId": "feecbcf6-a666-42e9-89b9-ce151903a28a"
+      },
+      "source": [
+        "c=\"CCCCCC\\nC\\nC\\nC\\nCCCCCC\"\n",
+        "e=\"EEEEEE\\nE\\nEEE\\nE\\nEEEEEE\"\n",
+        "s=\" SSSSS\\nS\\n SSSS\\n     S\\nSSSSS \"\n",
+        "a=\" AAAA \\nA    A\\nAAAAAA\\nA    A\\nA    A\"\n",
+        "r=\"RRRRR \\nR    R\\nRRRRR \\nR   R \\nR    R\"\n",
+        "print(f\"{str(c)}\\n\\n{str(e)}\\n\\n{str(s)}\\n\\n{str(a)}\\n\\n{str(r)}\")"
+      ],
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,17 +150,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BgsciiPW8L-a",
-        "outputId": "b8e7fd4c-ef09-4161-900d-d978cec289cc"
+        "outputId": "3a7a3614-1545-4962-82f6-e6cafa72fd80"
       },
       "source": [
         "c=\"CCCCCC\\nC\\nC\\nC\\nCCCCCC\"\n",
-        "e=\"EEEEEE\\nE\\nEEE\\nE\\nEEEEEE\"\n",
-        "s=\" SSSSS\\nS\\n SSSS\\n     S\\nSSSSS \"\n",
-        "a=\" AAAA \\nA    A\\nAAAAAA\\nA    A\\nA    A\"\n",
-        "r=\"RRRRR \\nR    R\\nRRRRR \\nR   R \\nR    R\"\n",
-        "print(c+ \"\\n\\n\" +e+\"\\n\\n\"+s+\"\\n\\n\"+a+\"\\n\\n\"+r)"
+        "e=\"\\tEEEEEE\\n\\tE\\n\\tEEE\\n\\tE\\n\\tEEEEEE\"\n",
+        "s=\"\\t SSSSS\\n\\t\\tS\\n\\t\\t SSSS\\n\\t\\t     S\\n\\t\\tSSSSS \"\n",
+        "a=\"\\t AAAA \\n\\t\\t\\tA    A\\n\\t\\t\\tAAAAAA\\n\\t\\t\\tA    A\\n\\t\\t\\tA    A\"\n",
+        "r=\"\\tRRRRR \\n\\t\\t\\t\\tR    R\\n\\t\\t\\t\\tRRRRR \\n\\t\\t\\t\\tR   R \\n\\t\\t\\t\\tR    R\"\n",
+        "print(str(c)+str(e)+str(s)+str(a)+str(r))"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,36 +170,23 @@
             "C\n",
             "C\n",
             "C\n",
-            "CCCCCC\n",
-            "\n",
-            "EEEEEE\n",
-            "E\n",
-            "EEE\n",
-            "E\n",
-            "EEEEEE\n",
-            "\n",
-            " SSSSS\n",
-            "S\n",
-            " SSSS\n",
-            "     S\n",
-            "SSSSS \n",
-            "\n",
-            " AAAA \n",
-            "A    A\n",
-            "AAAAAA\n",
-            "A    A\n",
-            "A    A\n",
-            "\n",
-            "RRRRR \n",
-            "R    R\n",
-            "RRRRR \n",
-            "R   R \n",
-            "R    R\n",
-            "CCCCCC\n",
-            "C\n",
-            "C\n",
-            "C\n",
-            "CCCCCC"
+            "CCCCCC\tEEEEEE\n",
+            "\tE\n",
+            "\tEEE\n",
+            "\tE\n",
+            "\tEEEEEE\t SSSSS\n",
+            "\t\tS\n",
+            "\t\t SSSS\n",
+            "\t\t     S\n",
+            "\t\tSSSSS \t AAAA \n",
+            "\t\t\tA    A\n",
+            "\t\t\tAAAAAA\n",
+            "\t\t\tA    A\n",
+            "\t\t\tA    A\tRRRRR \n",
+            "\t\t\t\tR    R\n",
+            "\t\t\t\tRRRRR \n",
+            "\t\t\t\tR   R \n",
+            "\t\t\t\tR    R\n"
           ]
         }
       ]
@@ -155,7 +198,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SRogwQ6AHBOc",
-        "outputId": "528b6587-0c7f-4b50-a4c9-7defbc078128"
+        "outputId": "78693dd0-bd7a-47e7-a217-981f8fee9dd8"
       },
       "source": [
         "primero = \"CCCCCC\\tEEEEEE\\t SSSSS\\t AAAA \\tRRRRR \"\n",
@@ -165,7 +208,39 @@
         "quinto  = \"CCCCCC\\tEEEEEE\\tSSSSS \\tA    A\\tR    R\"\n",
         "print(primero+\"\\n\"+segundo+\"\\n\"+tercero+\"\\n\"+cuarto+\"\\n\"+quinto)"
       ],
-      "execution_count": null,
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CCCCCC\tEEEEEE\t SSSSS\t AAAA \tRRRRR \n",
+            "C     \tE     \tS     \tA    A\tR    R\n",
+            "C     \tEEE   \t SSSS \tAAAAAA\tRRRRR \n",
+            "C     \tE     \t     S\tA    A\tR   R \n",
+            "CCCCCC\tEEEEEE\tSSSSS \tA    A\tR    R\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E0mhGVVJQZaj",
+        "outputId": "5c648006-2e05-4aeb-d0e3-d26d0e64dcac"
+      },
+      "source": [
+        "pri= \"CCCCCC\\tEEEEEE\\t SSSSS\\t AAAA \\tRRRRR \"\n",
+        "seg= \"C     \\tE     \\tS     \\tA    A\\tR    R\"\n",
+        "ter= \"C     \\tEEE   \\t SSSS \\tAAAAAA\\tRRRRR \"\n",
+        "cua= \"C     \\tE     \\t     S\\tA    A\\tR   R \"\n",
+        "qui= \"CCCCCC\\tEEEEEE\\tSSSSS \\tA    A\\tR    R\"\n",
+        "print(\"{0}\\n{1}\\n{2}\\n{3}\\n{4}\".format(pri,seg,ter,cua,qui))"
+      ],
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
