--- a/TAREA4.ipynb
+++ b/TAREA4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TAREA4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMsMW8/d6AYsxDaYOyjgTUi",
+      "authorship_tag": "ABX9TyOdZdXYEgJM4zX8JXSlt4te",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,10 +33,34 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "gvxXduL2KeXv",
-        "outputId": "06f38382-a4f9-4901-bd9e-a40a86c9d373"
+        "id": "OL_lt_on5h4J",
+        "outputId": "0637caf9-7956-4289-b3c2-b20fbcee8c4a"
       },
       "source": [
+        "print(\"Tarea 4\\t\\tRojas Perez César Emiliano\")"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tarea 4\t\tRojas Perez César Emiliano\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gvxXduL2KeXv",
+        "outputId": "12aaee13-b952-4605-cb0b-56a299094ff8"
+      },
+      "source": [
+        "print(\"Tarea 4\\t\\tRojas Perez César Emiliano\")\n",
         "c=\"CCCCCC\\nC\\nC\\nC\\nCCCCCC\"\n",
         "e=\"EEEEEE\\nE\\nEEE\\nE\\nEEEEEE\"\n",
         "s=\" SSSSS\\nS\\n SSSS\\n     S\\nSSSSS \"\n",
@@ -48,12 +72,16 @@
         "print(a, end=\"\\n\\n\")\n",
         "print(r)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Tarea 4\t\tRojas Perez César Emiliano\n",
+            "\n",
+            "-,-,-,-,-,,-,-,-,-,--,-,-,-,-,-,-,-,-,-\n",
+            "\n",
             "CCCCCC\n",
             "C\n",
             "C\n",
@@ -104,7 +132,7 @@
         "r=\"RRRRR \\nR    R\\nRRRRR \\nR   R \\nR    R\"\n",
         "print(f\"{str(c)}\\n\\n{str(e)}\\n\\n{str(s)}\\n\\n{str(a)}\\n\\n{str(r)}\")"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +188,7 @@
         "r=\"\\tRRRRR \\n\\t\\t\\t\\tR    R\\n\\t\\t\\t\\tRRRRR \\n\\t\\t\\t\\tR   R \\n\\t\\t\\t\\tR    R\"\n",
         "print(str(c)+str(e)+str(s)+str(a)+str(r))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,7 +236,7 @@
         "quinto  = \"CCCCCC\\tEEEEEE\\tSSSSS \\tA    A\\tR    R\"\n",
         "print(primero+\"\\n\"+segundo+\"\\n\"+tercero+\"\\n\"+cuarto+\"\\n\"+quinto)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +268,7 @@
         "qui= \"CCCCCC\\tEEEEEE\\tSSSSS \\tA    A\\tR    R\"\n",
         "print(\"{0}\\n{1}\\n{2}\\n{3}\\n{4}\".format(pri,seg,ter,cua,qui))"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
