--- a/TAREA4.ipynb
+++ b/TAREA4.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "TAREA4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOdZdXYEgJM4zX8JXSlt4te",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNQgj7T5KRR4pvCqJHhaElW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +40,7 @@
       "source": [
         "print(\"Tarea 4\\t\\tRojas Perez César Emiliano\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -57,31 +58,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gvxXduL2KeXv",
-        "outputId": "12aaee13-b952-4605-cb0b-56a299094ff8"
+        "outputId": "9e9b00d1-47f2-4988-95da-8a818509a35a"
       },
       "source": [
         "print(\"Tarea 4\\t\\tRojas Perez César Emiliano\")\n",
         "c=\"CCCCCC\\nC\\nC\\nC\\nCCCCCC\"\n",
         "e=\"EEEEEE\\nE\\nEEE\\nE\\nEEEEEE\"\n",
-        "s=\" SSSSS\\nS\\n SSSS\\n     S\\nSSSSS \"\n",
-        "a=\" AAAA \\nA    A\\nAAAAAA\\nA    A\\nA    A\"\n",
-        "r=\"RRRRR \\nR    R\\nRRRRR \\nR   R \\nR    R\"\n",
+        "s=\" SSSSS\\nS\\n SSSS\\n    S\\nSSSSS\"\n",
+        "a=\" AAAA\\nA    A\\nAAAAAA\\nA    A\\nA    A\"\n",
+        "r=\"RRRRR\\nR    R\\nRRRRR\\nR   R\\nR    R\"\n",
         "print(c, end=\"\\n\\n\")\n",
         "print(e, end=\"\\n\\n\")\n",
         "print(s, end=\"\\n\\n\")\n",
         "print(a, end=\"\\n\\n\")\n",
         "print(r)"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Tarea 4\t\tRojas Perez César Emiliano\n",
-            "\n",
-            "-,-,-,-,-,,-,-,-,-,--,-,-,-,-,-,-,-,-,-\n",
-            "\n",
             "CCCCCC\n",
             "C\n",
             "C\n",
@@ -97,19 +95,19 @@
             " SSSSS\n",
             "S\n",
             " SSSS\n",
-            "     S\n",
-            "SSSSS \n",
+            "    S\n",
+            "SSSSS\n",
             "\n",
-            " AAAA \n",
+            " AAAA\n",
             "A    A\n",
             "AAAAAA\n",
             "A    A\n",
             "A    A\n",
             "\n",
-            "RRRRR \n",
+            "RRRRR\n",
             "R    R\n",
-            "RRRRR \n",
-            "R   R \n",
+            "RRRRR\n",
+            "R   R\n",
             "R    R\n"
           ]
         }
@@ -127,9 +125,9 @@
       "source": [
         "c=\"CCCCCC\\nC\\nC\\nC\\nCCCCCC\"\n",
         "e=\"EEEEEE\\nE\\nEEE\\nE\\nEEEEEE\"\n",
-        "s=\" SSSSS\\nS\\n SSSS\\n     S\\nSSSSS \"\n",
-        "a=\" AAAA \\nA    A\\nAAAAAA\\nA    A\\nA    A\"\n",
-        "r=\"RRRRR \\nR    R\\nRRRRR \\nR   R \\nR    R\"\n",
+        "s=\" SSSSS\\nS\\n SSSS\\n     S\\nSSSSS\"\n",
+        "a=\" AAAA\\nA    A\\nAAAAAA\\nA    A\\nA    A\"\n",
+        "r=\"RRRRR\\nR    R\\nRRRRR\\nR   R\\nR    R\"\n",
         "print(f\"{str(c)}\\n\\n{str(e)}\\n\\n{str(s)}\\n\\n{str(a)}\\n\\n{str(r)}\")"
       ],
       "execution_count": null,
@@ -178,17 +176,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BgsciiPW8L-a",
-        "outputId": "3a7a3614-1545-4962-82f6-e6cafa72fd80"
+        "outputId": "2a45375b-5255-40ff-a5fb-d69f9b591d54"
       },
       "source": [
         "c=\"CCCCCC\\nC\\nC\\nC\\nCCCCCC\"\n",
         "e=\"\\tEEEEEE\\n\\tE\\n\\tEEE\\n\\tE\\n\\tEEEEEE\"\n",
-        "s=\"\\t SSSSS\\n\\t\\tS\\n\\t\\t SSSS\\n\\t\\t     S\\n\\t\\tSSSSS \"\n",
-        "a=\"\\t AAAA \\n\\t\\t\\tA    A\\n\\t\\t\\tAAAAAA\\n\\t\\t\\tA    A\\n\\t\\t\\tA    A\"\n",
-        "r=\"\\tRRRRR \\n\\t\\t\\t\\tR    R\\n\\t\\t\\t\\tRRRRR \\n\\t\\t\\t\\tR   R \\n\\t\\t\\t\\tR    R\"\n",
+        "s=\"\\t SSSSS\\n\\t\\tS\\n\\t\\t SSSS\\n\\t\\t     S\\n\\t\\tSSSSS\"\n",
+        "a=\"\\t AAAA\\n\\t\\t\\tA    A\\n\\t\\t\\tAAAAAA\\n\\t\\t\\tA    A\\n\\t\\t\\tA    A\"\n",
+        "r=\"\\tRRRRR\\n\\t\\t\\t\\tR    R\\n\\t\\t\\t\\tRRRRR\\n\\t\\t\\t\\tR   R\\n\\t\\t\\t\\tR    R\"\n",
         "print(str(c)+str(e)+str(s)+str(a)+str(r))"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,14 +204,14 @@
             "\t\tS\n",
             "\t\t SSSS\n",
             "\t\t     S\n",
-            "\t\tSSSSS \t AAAA \n",
+            "\t\tSSSSS\t AAAA\n",
             "\t\t\tA    A\n",
             "\t\t\tAAAAAA\n",
             "\t\t\tA    A\n",
-            "\t\t\tA    A\tRRRRR \n",
+            "\t\t\tA    A\tRRRRR\n",
             "\t\t\t\tR    R\n",
-            "\t\t\t\tRRRRR \n",
-            "\t\t\t\tR   R \n",
+            "\t\t\t\tRRRRR\n",
+            "\t\t\t\tR   R\n",
             "\t\t\t\tR    R\n"
           ]
         }
@@ -229,10 +227,10 @@
         "outputId": "78693dd0-bd7a-47e7-a217-981f8fee9dd8"
       },
       "source": [
-        "primero = \"CCCCCC\\tEEEEEE\\t SSSSS\\t AAAA \\tRRRRR \"\n",
+        "primero = \"CCCCCC\\tEEEEEE\\t SSSSS\\t AAAA \\tRRRRR\"\n",
         "segundo = \"C     \\tE     \\tS     \\tA    A\\tR    R\"\n",
-        "tercero = \"C     \\tEEE   \\t SSSS \\tAAAAAA\\tRRRRR \"\n",
-        "cuarto  = \"C     \\tE     \\t     S\\tA    A\\tR   R \"\n",
+        "tercero = \"C     \\tEEE   \\t SSSS \\tAAAAAA\\tRRRRR\"\n",
+        "cuarto  = \"C     \\tE     \\t     S\\tA    A\\tR   R\"\n",
         "quinto  = \"CCCCCC\\tEEEEEE\\tSSSSS \\tA    A\\tR    R\"\n",
         "print(primero+\"\\n\"+segundo+\"\\n\"+tercero+\"\\n\"+cuarto+\"\\n\"+quinto)"
       ],
@@ -261,10 +259,10 @@
         "outputId": "5c648006-2e05-4aeb-d0e3-d26d0e64dcac"
       },
       "source": [
-        "pri= \"CCCCCC\\tEEEEEE\\t SSSSS\\t AAAA \\tRRRRR \"\n",
+        "pri= \"CCCCCC\\tEEEEEE\\t SSSSS\\t AAAA \\tRRRRR\"\n",
         "seg= \"C     \\tE     \\tS     \\tA    A\\tR    R\"\n",
-        "ter= \"C     \\tEEE   \\t SSSS \\tAAAAAA\\tRRRRR \"\n",
-        "cua= \"C     \\tE     \\t     S\\tA    A\\tR   R \"\n",
+        "ter= \"C     \\tEEE   \\t SSSS \\tAAAAAA\\tRRRRR\"\n",
+        "cua= \"C     \\tE     \\t     S\\tA    A\\tR   R\"\n",
         "qui= \"CCCCCC\\tEEEEEE\\tSSSSS \\tA    A\\tR    R\"\n",
         "print(\"{0}\\n{1}\\n{2}\\n{3}\\n{4}\".format(pri,seg,ter,cua,qui))"
       ],
