--- a/FUNDAMENTOS2_CyP_1157.ipynb
+++ b/FUNDAMENTOS2_CyP_1157.ipynb
@@ -6,7 +6,7 @@
       "name": "FUNDAMENTOS2_CyP_1157.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOQ/HAGggeaDQb6kWb1Ed2d",
+      "authorship_tag": "ABX9TyPBoUVa1wqb1se0x2g9h0PL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,7 +90,7 @@
         "numeros.append(88)\n",
         "print(numeros)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +127,7 @@
         "print(cosas)\n",
         "\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +166,7 @@
         "print(numeros[::-1]) \n",
         "#cuando el incremento es un numero negativo, el incremento es al revez\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +195,7 @@
         "numeros = [ x*3 for x in range(101)]\n",
         "print(numeros)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,7 +234,7 @@
         "numeros = [ x for x in range(50,101,5)]\n",
         "print(numeros)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,7 +266,7 @@
       "source": [
         "dir(list)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +383,7 @@
         "print(onombres)\n",
         "print(resultado)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,6 +410,268 @@
             "['Josue', 'Diana', 'Dalia', 'Jesus', 'Espiritu Santo', 'Maria', 'Jose']\n",
             "['Josue', 'Diana', 'Dalia', 'Jesus', 'Espiritu Santo', 'Maria']\n",
             "Jose\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7InblgmOzBgs"
+      },
+      "source": [
+        "# Tuplas\n",
+        "\n",
+        "## Caracteristicas\n",
+        "- Son datos agrupados\n",
+        "- Se declaran usando:\n",
+        "    - ( )\n",
+        "    - tuple()\n",
+        "- Es una estructura secuencial, indexada a partir de 0.\n",
+        "- Pueden tener 0 a n elementos.\n",
+        "- NO SON MUTABLES (no se puede eliminar y/o cambiar).\n",
+        "- Son buenas para almacenar información de consulta.\n",
+        "- Pueden almacenar información de diferentes tipos de dato.\n",
+        "- Pueden estar anidadas\n",
+        "- Tienen metodos utiles"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-FDq5Y3IxjU8",
+        "outputId": "cd8c92e4-9fa0-4f1f-a392-ee1e55d2b10f"
+      },
+      "source": [
+        "info=(\"juan23\",\"dios 1234\", \"123.232.1.12\")\n",
+        "print(info)\n",
+        "print(info[1])\n",
+        "#info[1]=\"patito23\"\n",
+        "\n",
+        "numeros=(0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15)\n",
+        "print(numeros)\n",
+        "print(numeros[5:11])\n",
+        "cosas=(info,numeros)\n",
+        "print(cosas)\n",
+        "print(cosas[1][5:11:1])\n",
+        "print(cosas[0][2][4:7])\n",
+        "print(cosas[0][2][-8:-5])"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('juan23', 'dios 1234', '123.232.1.12')\n",
+            "dios 1234\n",
+            "(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15)\n",
+            "(5, 6, 7, 8, 9, 10)\n",
+            "(('juan23', 'dios 1234', '123.232.1.12'), (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15))\n",
+            "(5, 6, 7, 8, 9, 10)\n",
+            "232\n",
+            "232\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5icg9AiJ0b_N"
+      },
+      "source": [
+        "# Métodos de las tuplas\n",
+        "\n",
+        "Son los mismos de las listas pero los que no involucren mutabilidad."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l1BvsJzh0bFS",
+        "outputId": "979f8c16-d70c-4493-e174-ba6e6fa88f08"
+      },
+      "source": [
+        "dir(tuple)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['__add__',\n",
+              " '__class__',\n",
+              " '__contains__',\n",
+              " '__delattr__',\n",
+              " '__dir__',\n",
+              " '__doc__',\n",
+              " '__eq__',\n",
+              " '__format__',\n",
+              " '__ge__',\n",
+              " '__getattribute__',\n",
+              " '__getitem__',\n",
+              " '__getnewargs__',\n",
+              " '__gt__',\n",
+              " '__hash__',\n",
+              " '__init__',\n",
+              " '__init_subclass__',\n",
+              " '__iter__',\n",
+              " '__le__',\n",
+              " '__len__',\n",
+              " '__lt__',\n",
+              " '__mul__',\n",
+              " '__ne__',\n",
+              " '__new__',\n",
+              " '__reduce__',\n",
+              " '__reduce_ex__',\n",
+              " '__repr__',\n",
+              " '__rmul__',\n",
+              " '__setattr__',\n",
+              " '__sizeof__',\n",
+              " '__str__',\n",
+              " '__subclasshook__',\n",
+              " 'count',\n",
+              " 'index']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v-NKcTCb2oNh"
+      },
+      "source": [
+        "# Diccionarios\n",
+        "### Caracteristicas de los diccionarios\n",
+        "\n",
+        "- Agrupan datos pero de forma no lineal.\n",
+        "- Se declaran con :\n",
+        "    - { }\n",
+        "    - dict()\n",
+        "- Formado por pares del tipo llave:valor, donde:\n",
+        "    - llave es de tipo string (siempre)\n",
+        "    - valor puede ser de cualquier tipo de dato, incluyendi los diccionarios\n",
+        "- Se seleccionan con la llave de la forma: [\"id_llave\"]\n",
+        "- Son anidables\n",
+        "- Son mutables\n",
+        "- Son equivalentes al tipo de dato JSON de lenguaje JavaScript (JS)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VmV2cMWt3xyo",
+        "outputId": "28c53a9f-a6c8-482e-bbd8-deed1b9eb239"
+      },
+      "source": [
+        "alumno = {\"nombre\" : \"José\"}\n",
+        "print(alumno)\n",
+        "print(alumno[\"nombre\"])\n",
+        "alumno={\"nombre\":\"José\", \"nc\":\"2129229292\",\"edad\":18}\n",
+        "print(\"Edad del alumno =\", alumno [\"edad\"])\n",
+        "print(alumno[\"nombre\"].upper())\n",
+        "\n",
+        "print(\"Alumno 2;\")\n",
+        "alumno2=dict() #{ }\n",
+        "alumno2[\"nombre\"]=\"jose\"\n",
+        "print(alumno2)\n",
+        "alumno2[\"nc\"] =\"2129229292\"\n",
+        "alumno2[\"edad\"] = 18\n",
+        "print(alumno2)\n",
+        "alumno2[\"edad\"]=alumno2[\"edad\"]+1\n",
+        "print(alumno2)\n"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'nombre': 'José'}\n",
+            "José\n",
+            "Edad del alumno = 18\n",
+            "JOSÉ\n",
+            "Alumno 2;\n",
+            "{'nombre': 'jose'}\n",
+            "{'nombre': 'jose', 'nc': '2129229292', 'edad': 18}\n",
+            "{'nombre': 'jose', 'nc': '2129229292', 'edad': 19}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a-9LFQ2a8KNm",
+        "outputId": "dd5190ba-d697-4382-dd53-28a8ed4c6d0a"
+      },
+      "source": [
+        "cliente ={\"id\":\"CT2121\",\n",
+        "          \"nombre\":\"José Pedroza Rosales\", \n",
+        "          \"telefonos\":\"casa = 554456565 cel = 0445567767\"}\n",
+        "print(cliente)\n",
+        "cliente ={\"id\":\"CT2121\",\n",
+        "          \"nombre\":{\n",
+        "              \"nombres\":[\"Jose\"],\n",
+        "              \"paterno\":\"Pedroza\",\n",
+        "              \"materno\":\"Rosales\" \n",
+        "          },\n",
+        "          \"telefonos\":{\n",
+        "              \"casa\":\"5566324234\",\n",
+        "              \"trabajo\":\"554433232\",\n",
+        "              \"celular\":\"04455234234\"\n",
+        "          },\n",
+        "          \"productos\":{\n",
+        "              \"ahorro\":{\"numero_cuenta\":\"7788\",\"ahorro\":2500.5},\n",
+        "              \"tarjetas\":[\n",
+        "                           {\"tipo\":\"debito\",\"saldo\":10000.5},\n",
+        "                           {\"tipo\":\"credito preferente\",\"limite\":250000.5},\n",
+        "                           {\"tipo\":\"lite\",\"limite\":15000.5}\n",
+        "              ]\n",
+        "          },\n",
+        "          \"dirrecion\":{\n",
+        "              \"calle\":\"Av. central\",\n",
+        "              \"numero\":1245,\n",
+        "              \"colonia\":\"Impulsora\",\n",
+        "              \"delegacion\":\"Nezahualcoyotl\",\n",
+        "              \"estado\":{\n",
+        "                         \"clave\":15,\n",
+        "                         \"nombre_corto\":\"EdoMex\",\n",
+        "                         \"nombre\":\"Estado de México\"\n",
+        "              }\n",
+        "          }\n",
+        "\n",
+        "          }\n",
+        "print(cliente[\"telefonos\"][\"casa\"])\n",
+        "print(cliente)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'id': 'CT2121', 'nombre': 'José Pedroza Rosales', 'telefonos': 'casa = 554456565 cel = 0445567767'}\n",
+            "5566324234\n",
+            "{'id': 'CT2121', 'nombre': {'nombres': ['Jose'], 'paterno': 'Pedroza', 'materno': 'Rosales'}, 'telefonos': {'casa': '5566324234', 'trabajo': '554433232', 'celular': '04455234234'}, 'productos': {'ahorro': {'numero_cuenta': '7788', 'ahorro': 2500.5}, 'tarjetas': [{'tipo': 'debito', 'saldo': 10000.5}, {'tipo': 'credito preferente', 'limite': 250000.5}, {'tipo': 'lite', 'limite': 15000.5}]}, 'dirrecion': {'calle': 'Av. central', 'numero': 1245, 'colonia': 'Impulsora', 'delegacion': 'Nezahualcoyotl', 'estado': {'clave': 15, 'nombre_corto': 'EdoMex', 'nombre': 'Estado de México'}}}\n"
           ]
         }
       ]
