--- a/FUNDAMENTOS2_CyP_1157.ipynb
+++ b/FUNDAMENTOS2_CyP_1157.ipynb
@@ -6,7 +6,7 @@
       "name": "FUNDAMENTOS2_CyP_1157.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPBoUVa1wqb1se0x2g9h0PL",
+      "authorship_tag": "ABX9TyMraMtaMyfowEmriZB/ewG1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -621,7 +621,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a-9LFQ2a8KNm",
-        "outputId": "dd5190ba-d697-4382-dd53-28a8ed4c6d0a"
+        "outputId": "7ec5d886-f25f-4a3b-a2f2-716c089ff6bb"
       },
       "source": [
         "cliente ={\"id\":\"CT2121\",\n",
@@ -661,9 +661,12 @@
         "\n",
         "          }\n",
         "print(cliente[\"telefonos\"][\"casa\"])\n",
-        "print(cliente)"
+        "print(cliente)\n",
+        "print(cliente[\"productos\"][\"ahorro\"][\"ahorro\"])\n",
+        "print(cliente[\"productos\"][\"tarjetas\"][2][\"limite\"])\n",
+        "print(cliente[\"dirrecion\"][\"estado\"][\"nombre\"].upper())"
       ],
-      "execution_count": 17,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -671,7 +674,10 @@
           "text": [
             "{'id': 'CT2121', 'nombre': 'José Pedroza Rosales', 'telefonos': 'casa = 554456565 cel = 0445567767'}\n",
             "5566324234\n",
-            "{'id': 'CT2121', 'nombre': {'nombres': ['Jose'], 'paterno': 'Pedroza', 'materno': 'Rosales'}, 'telefonos': {'casa': '5566324234', 'trabajo': '554433232', 'celular': '04455234234'}, 'productos': {'ahorro': {'numero_cuenta': '7788', 'ahorro': 2500.5}, 'tarjetas': [{'tipo': 'debito', 'saldo': 10000.5}, {'tipo': 'credito preferente', 'limite': 250000.5}, {'tipo': 'lite', 'limite': 15000.5}]}, 'dirrecion': {'calle': 'Av. central', 'numero': 1245, 'colonia': 'Impulsora', 'delegacion': 'Nezahualcoyotl', 'estado': {'clave': 15, 'nombre_corto': 'EdoMex', 'nombre': 'Estado de México'}}}\n"
+            "{'id': 'CT2121', 'nombre': {'nombres': ['Jose'], 'paterno': 'Pedroza', 'materno': 'Rosales'}, 'telefonos': {'casa': '5566324234', 'trabajo': '554433232', 'celular': '04455234234'}, 'productos': {'ahorro': {'numero_cuenta': '7788', 'ahorro': 2500.5}, 'tarjetas': [{'tipo': 'debito', 'saldo': 10000.5}, {'tipo': 'credito preferente', 'limite': 250000.5}, {'tipo': 'lite', 'limite': 15000.5}]}, 'dirrecion': {'calle': 'Av. central', 'numero': 1245, 'colonia': 'Impulsora', 'delegacion': 'Nezahualcoyotl', 'estado': {'clave': 15, 'nombre_corto': 'EdoMex', 'nombre': 'Estado de México'}}}\n",
+            "2500.5\n",
+            "15000.5\n",
+            "ESTADO DE MÉXICO\n"
           ]
         }
       ]
