--- a/FUNDAMENTOS2_CyP_1157.ipynb
+++ b/FUNDAMENTOS2_CyP_1157.ipynb
@@ -6,7 +6,7 @@
       "name": "FUNDAMENTOS2_CyP_1157.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMraMtaMyfowEmriZB/ewG1",
+      "authorship_tag": "ABX9TyPAjIa7kIM3bQFu/4/pQAr4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -460,7 +460,7 @@
         "print(cosas[0][2][4:7])\n",
         "print(cosas[0][2][-8:-5])"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -501,7 +501,7 @@
       "source": [
         "dir(tuple)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -596,7 +596,7 @@
         "alumno2[\"edad\"]=alumno2[\"edad\"]+1\n",
         "print(alumno2)\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -621,7 +621,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a-9LFQ2a8KNm",
-        "outputId": "7ec5d886-f25f-4a3b-a2f2-716c089ff6bb"
+        "outputId": "d177eabb-ace8-426a-f07d-32da10a596da"
       },
       "source": [
         "cliente ={\"id\":\"CT2121\",\n",
@@ -664,9 +664,11 @@
         "print(cliente)\n",
         "print(cliente[\"productos\"][\"ahorro\"][\"ahorro\"])\n",
         "print(cliente[\"productos\"][\"tarjetas\"][2][\"limite\"])\n",
-        "print(cliente[\"dirrecion\"][\"estado\"][\"nombre\"].upper())"
+        "print(cliente[\"dirrecion\"][\"estado\"][\"nombre\"].upper())\n",
+        "cliente[\"productos\"][\"ahorro\"][\"ahorro\"]-=1500.0\n",
+        "print(cliente[\"productos\"])"
       ],
-      "execution_count": 20,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -677,7 +679,186 @@
             "{'id': 'CT2121', 'nombre': {'nombres': ['Jose'], 'paterno': 'Pedroza', 'materno': 'Rosales'}, 'telefonos': {'casa': '5566324234', 'trabajo': '554433232', 'celular': '04455234234'}, 'productos': {'ahorro': {'numero_cuenta': '7788', 'ahorro': 2500.5}, 'tarjetas': [{'tipo': 'debito', 'saldo': 10000.5}, {'tipo': 'credito preferente', 'limite': 250000.5}, {'tipo': 'lite', 'limite': 15000.5}]}, 'dirrecion': {'calle': 'Av. central', 'numero': 1245, 'colonia': 'Impulsora', 'delegacion': 'Nezahualcoyotl', 'estado': {'clave': 15, 'nombre_corto': 'EdoMex', 'nombre': 'Estado de México'}}}\n",
             "2500.5\n",
             "15000.5\n",
-            "ESTADO DE MÉXICO\n"
+            "ESTADO DE MÉXICO\n",
+            "{'ahorro': {'numero_cuenta': '7788', 'ahorro': 1000.5}, 'tarjetas': [{'tipo': 'debito', 'saldo': 10000.5}, {'tipo': 'credito preferente', 'limite': 250000.5}, {'tipo': 'lite', 'limite': 15000.5}]}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bjqp3Wl3JB8-"
+      },
+      "source": [
+        "peli={\"pelicula\":\"Harry Potter\",\n",
+        "      \"personajes\":{\n",
+        "          \"per_1\":{\n",
+        "              \"nombre\":\"Harry\"\n",
+        "              \"apellido\":\"Potter\"\n",
+        "              \"casa_howards\":\"Griffindor\"\n",
+        "          }\n",
+        "          \"per_2\":{\n",
+        "              \"nombre\":\"Hermione\"\n",
+        "              \"apellido\":\"Graner\"\n",
+        "              \"casa_howards\":\"Griffindor\"\n",
+        "          }\n",
+        "          \"per_3\":{\n",
+        "              \"nombre\":\n",
+        "              \"apellido\":\n",
+        "              \"casa_howards\":\"Griffindor\"\n",
+        "          }\n",
+        "        \"saga\":{\n",
+        "            \"peli_1\":\"La piedra filosofal\"\n",
+        "            \"peli_2\":\"La camara secreta\"\n",
+        "            \"peli_3\":\"El prisonero de azkaban\"\n",
+        "            \"peli_4\":\"El caliz de fuego\"\n",
+        "\n",
+        "        }\n",
+        "      }"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5j-zldaaMkGz"
+      },
+      "source": [
+        "# Estructuras de control de programación\n",
+        "\n",
+        "Se puede crear cualquier tipo de algoritmo solamente 3 estructuras de contrl:\n",
+        "\n",
+        "1. Secuencia:\n",
+        "    - La representación de la memoria de programa (Arquitectura Vonn Newman)\n",
+        "\n",
+        "2. Selección:\n",
+        "    - Es la estructura de control que decide si un bloque de programa se ejecuta o no se ejecuta. Tambien permite seleccionar ejecutar un bloquer entre un conjunto de opciones.\n",
+        "    En resumente tenemos: Selección simple, selección con bifurcación y selección múltiple.\n",
+        "\n",
+        "3. Repetición:\n",
+        "    - Este tipo de estructura nos permite automatizar la ejecución repetitiva de código mientras ciertas condiciones se cumplan, tenemos 3 variantes de esta estructura en todos los lenguajes de programación:\n",
+        "      - Desde ... hasta (estructura for)\n",
+        "      - Haz mientras (estructura while)\n",
+        "      - Haz y luego validaz mientras (estructura Do-While)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Yaxziz3yR9pC"
+      },
+      "source": [
+        "# Selección simple\n",
+        "-- Documentar, o poner notas\n",
+        "\n",
+        "la estructura if\n",
+        "```\n",
+        "if <CONDICION>:\n",
+        "   <Cuerpo del if>\n",
+        "```\n",
+        "\n",
+        "**NOTA** Para establecer el cuerpo de una estructura de control en Python se usan los tabuladores a la izq. \n",
+        "\n",
+        "En otros lenguajes de programación como java, c y c++... se usan las llaves { }\n",
+        "\n",
+        "```\n",
+        "int edad =0;\n",
+        "printf(\"Danme tu edad\");\n",
+        "scanf(\"%i\",&edad);\n",
+        "if(edad >= 18){\n",
+        "   printf(\"ERES MAYOR DE EDAD\")\n",
+        "}\n",
+        "printf(\"Fin del programa\")\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2YGQ41fcR8m3",
+        "outputId": "765e8228-a561-481e-d608-ab6d42a64ce7"
+      },
+      "source": [
+        "edad=int(input(\"Dame tu edad: \"))\n",
+        "print(f\"Tecleaste {edad} años\")\n",
+        "if edad >= 18 :\n",
+        "  print(\"Eres mayor de edad\".upper())\n",
+        "  print(\"Algo\")\n",
+        "  print(\"Otra cosa\")#los tabuladores se utilizan para las estructuras\n",
+        "print(\"Fin del programa\")"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame tu edad: 18\n",
+            "Tecleaste 18 años\n",
+            "ERES MAYOR DE EDAD\n",
+            "Algo\n",
+            "Otra cosa\n",
+            "Fin del programa\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "znvceAGqWQXW",
+        "outputId": "8b6225a9-6eb7-4935-f386-118ed20095ff"
+      },
+      "source": [
+        "CAL=float(input(\"CAL: \"))\n",
+        "if CAL > 8:\n",
+        "    print(\"Aprobado\")\n",
+        "print (\"Fin del programa\")"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CAL: 7.99\n",
+            "Fin del programa\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dJV9i_hUXXOJ",
+        "outputId": "aac33ffe-2823-4b6a-950d-ada13bcc675f"
+      },
+      "source": [
+        "SUE=float(input(\"Dame tu sueldo: \"))\n",
+        "if SUE < 1000:\n",
+        "    AUM = SUE * 0.15\n",
+        "    MSUE = SUE + AUM\n",
+        "    print(f\"Tu sueldo actual es de: {MSUE}\")"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame tu sueldo: 875.50\n",
+            "Tu sueldo actual es de: 1006.825\n"
           ]
         }
       ]
